# Worminator

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  main.py  overlay_ws.py  postgres.py  pyproject.toml  raffle.py  schema.sql  settings.py  todo.txt  utils.py
overlay/: README.md  index.html  index.js  styles.css
tests/: README.md  test.ps1  test_main.py  test_postgres.py  test_raffle.py  test_raffle_commands.py  test_raffle_functional.py  test_utils.py
tests/support/: db_fakes.py  fakes.py
